# devnest

./: .env.example  .gitignore  BEFORE_CODING.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  devnest.code-workspace  index.html  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml  msvc-linker.cmd
src-tauri/capabilities/: default.json
src-tauri/resources/optional-tools/: packages.json
src-tauri/resources/php-extensions/: packages.json
src-tauri/resources/runtimes/: README.md  packages.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: app.rs  configs.rs  database.rs  diagnostics.rs  download_cache.rs  frankenphp_octane.rs  frankenphp_production_export.rs  hosts.rs  logs.rs  mobile_preview.rs  mod.rs  optional_tools.rs  persistent_tunnels.rs  php_extensions.rs  ports.rs  project_env_vars.rs  project_profiles.rs  project_scheduled_tasks.rs  project_workers.rs  projects.rs  recipes.rs  redis_manager.rs  reliability.rs  runtime_configs.rs  runtimes.rs  services.rs  ssl.rs  tunnels.rs  workspace.rs
src-tauri/src/core/: config_generator.rs  database_time_machine.rs  diagnostics.rs  download_cache.rs  frankenphp_octane_manager.rs  hosts_editor.rs  local_ssl.rs  log_reader.rs  mobile_preview.rs  mod.rs  optional_tools.rs  persistent_tunnels.rs  php_cli_environment.rs  php_extension_packages.rs  ports.rs  project_env_inspector.rs  project_scanner.rs  reliability.rs  runtime_config.rs  runtime_packages.rs  runtime_registry.rs  (+3 more)
(+156 files in other folders)
