[package]
name = "devnest"
version = "0.1.6"
description = "Smart local PHP workspace for Windows"
authors = ["DevNest"]
edition = "2024"

[lib]
name = "devnest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.16"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.10.1"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.60", features = ["Win32_UI_WindowsAndMessaging"] }
winreg = "0.55"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
